--- a/asterix-app/src/test/resources/logging.properties
+++ b/asterix-app/src/test/resources/logging.properties
@@ -1,19 +1,22 @@
 #/*
-# Copyright 2009-2013 by The Regents of the University of California
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# you may obtain a copy of the License from
-# 
-#     http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#*/
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
 ############################################################
-#  	Default Logging Configuration File
+#      Default Logging Configuration File
 #
 # You can use a different file by specifying a filename
 # with the java.util.logging.config.file system property.  
@@ -21,7 +24,7 @@
 ############################################################
 
 ############################################################
-#  	Global properties
+#      Global properties
 ############################################################
 
 # "handlers" specifies a comma separated list of log Handler 
@@ -75,9 +78,9 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 # messages:
 
 
-edu.uci.ics.asterix.test.level = INFO
-#edu.uci.ics.asterix.level = FINE
-#edu.uci.ics.hyracks.algebricks.level = FINE
-#edu.uci.ics.hyracks.level = INFO
-edu.uci.ics.asterix.test = INFO
-edu.uci.ics.asterix.installer.test = INFO
+org.apache.asterix.test.level = INFO
+#org.apache.asterix.level = FINE
+#org.apache.hyracks.algebricks.level = FINE
+#org.apache.hyracks.level = INFO
+org.apache.asterix.test = INFO
+org.apache.asterix.installer.test = INFO
